--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         </div>
     </div>
 
+    <script src="firebase-config.js"></script>
     <script src="app.js"></script>
     <script src="js/auth.js"></script>
     <!-- We will add other JS files like admin.js, cashier.js later -->
